fix: tratando exceções

--- a/scrap.ipynb
+++ b/scrap.ipynb
@@ -33,8 +33,8 @@
    ],
    "source": [
     "# Requisitos necessários para rodar o script\n",
-    "!pip install selenium\n",
-    "!pip install bs4"
+    "%pip install selenium\n",
+    "%pip install bs4"
    ]
   },
   {
@@ -1701,7 +1701,7 @@
     }
    ],
    "source": [
-    "pip install openpyxl"
+    "%pip install openpyxl"
    ]
   },
   {
